--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <button class="btn modal-close-button">Close</button>
         </div>
     </div>
+    <script src="api.js"></script>
     <script src="script.js"></script>
+    
 </body>
 </html>
